Downgrade to jdk 17